--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>Đây là trang giới thiệu</h1>
+    <h1>Đây là trang giới thiệu 1</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit consequuntur omnis, quas tempore ut neque. Illum
         ducimus iusto incidunt, quam iste sapiente necessitatibus obcaecati commodi architecto sunt quia numquam ad.</p>
 </body>
